third_party/move/move-compiler/tests/move_check/deprecated/deprecated_constant_duplicated_struct2.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:5:11
  │
3 │     struct C { }
  │            - Alias previously defined here
4 │     #[deprecated]
5 │     const C: u64 = 0;
  │           ^ Duplicate module member or alias 'C'. Top level names in a namespace must be unique

warning[W09001]: unused alias
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:12:15
   │
12 │     use 0x42::mod1;
   │               ^^^^ Unused 'use' of alias 'mod1'. Consider removing it

warning[W03017]: Use of deprecated constant
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:13:21
   │
 4 │     #[deprecated]
   │       ---------- Constant 'C' in module '0x42::mod1' deprecated here
   ·
13 │     use 0x42::mod1::C as D;
   │                     ^ Use of deprecated constant 'C' from module '0x42::mod1'

warning[W03017]: Use of deprecated constant
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:14:21
   │
 4 │     #[deprecated]
   │       ---------- Constant 'C' in module '0x42::mod1' deprecated here
   ·
14 │     use 0x42::mod1::C as C;
   │                     ^ Use of deprecated constant 'C' from module '0x42::mod1'

warning[W03015]: Use of deprecated struct
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:17:27
   │
 4 │     #[deprecated]
   │       ---------- Struct 'C' in module '0x42::mod1' deprecated here
   ·
17 │     fun f1(): 0x42::mod1::C {
   │                           ^ Use of deprecated struct 'C' from module '0x42::mod1'

warning[W03014]: Use of deprecated member
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:19:2
   │
 4 │     #[deprecated]
   │       ---------- Member 'C' in module '0x42::mod1' deprecated here
   ·
19 │     C;
   │     ^ Use of deprecated member 'C' from module '0x42::mod1'

error[E04001]: restricted visibility
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:19:2
   │
 5 │     const C: u64 = 0;
   │           - Constants are internal to their module, and cannot can be accessed outside of their module
   ·
19 │     C;
   │     ^ Invalid access of '0x42::mod1::C'

warning[W03017]: Use of deprecated constant
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:21:22
   │
 4 │     #[deprecated]
   │       ---------- Constant 'C' in module '0x42::mod1' deprecated here
   ·
21 │         use 0x42::mod1::C;
   │                         ^ Use of deprecated constant 'C' from module '0x42::mod1'

warning[W03014]: Use of deprecated member
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:22:6
   │
 4 │     #[deprecated]
   │       ---------- Member 'C' in module '0x42::mod1' deprecated here
   ·
22 │         C
   │         ^ Use of deprecated member 'C' from module '0x42::mod1'

error[E04001]: restricted visibility
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:22:6
   │
 5 │     const C: u64 = 0;
   │           - Constants are internal to their module, and cannot can be accessed outside of their module
   ·
22 │         C
   │         ^ Invalid access of '0x42::mod1::C'

warning[W03014]: Use of deprecated member
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:24:2
   │
 4 │     #[deprecated]
   │       ---------- Member 'C' in module '0x42::mod1' deprecated here
   ·
24 │     D
   │     ^ Use of deprecated member 'C' from module '0x42::mod1'

error[E04001]: restricted visibility
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:24:2
   │
 5 │     const C: u64 = 0;
   │           - Constants are internal to their module, and cannot can be accessed outside of their module
   ·
24 │     D
   │     ^ Invalid access of '0x42::mod1::C'

error[E04007]: incompatible types
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:24:2
   │
 5 │     const C: u64 = 0;
   │              --- Given: 'u64'
   ·
17 │     fun f1(): 0x42::mod1::C {
   │               ------------- Expected: '0x42::mod1::C'
   ·
24 │     D
   │     ^ Invalid return expression

warning[W09001]: unused alias
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:31:15
   │
31 │     use 0x42::mod1;
   │               ^^^^ Unused 'use' of alias 'mod1'. Consider removing it

warning[W03017]: Use of deprecated constant
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:32:21
   │
 4 │     #[deprecated]
   │       ---------- Constant 'C' in module '0x42::mod1' deprecated here
   ·
32 │     use 0x42::mod1::C as mod1;
   │                     ^ Use of deprecated constant 'C' from module '0x42::mod1'

error[E02010]: invalid name
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:32:26
   │
32 │     use 0x42::mod1::C as mod1;
   │                          ^^^^ Invalid constant alias name 'mod1'. Constant alias names must start with 'A'..'Z'

warning[W03017]: Use of deprecated constant
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:33:21
   │
 4 │     #[deprecated]
   │       ---------- Constant 'C' in module '0x42::mod1' deprecated here
   ·
33 │     use 0x42::mod1::C as C;
   │                     ^ Use of deprecated constant 'C' from module '0x42::mod1'

error[E04007]: incompatible types
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:36:9
   │
36 │     fun f1(): 0x42::mod1::C {
   │         ^^    ------------- Given: '0x42::mod1::C'
   │         │      
   │         Invalid 'script' function return type. The function entry point to a 'script' must have the return type '()'
   │         Expected: '()'

warning[W03015]: Use of deprecated struct
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:36:27
   │
 4 │     #[deprecated]
   │       ---------- Struct 'C' in module '0x42::mod1' deprecated here
   ·
36 │     fun f1(): 0x42::mod1::C {
   │                           ^ Use of deprecated struct 'C' from module '0x42::mod1'

warning[W03014]: Use of deprecated member
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:38:2
   │
 4 │     #[deprecated]
   │       ---------- Member 'C' in module '0x42::mod1' deprecated here
   ·
38 │     C;
   │     ^ Use of deprecated member 'C' from module '0x42::mod1'

error[E04001]: restricted visibility
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:38:2
   │
 5 │     const C: u64 = 0;
   │           - Constants are internal to their module, and cannot can be accessed outside of their module
   ·
38 │     C;
   │     ^ Invalid access of '0x42::mod1::C'

error[E04007]: incompatible types
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:39:2
   │  
 5 │       const C: u64 = 0;
   │                --- Given: 'u64'
   ·  
36 │       fun f1(): 0x42::mod1::C {
   │                 ------------- Expected: '0x42::mod1::C'
   ·  
39 │ ╭     {
40 │ │         use 0x42::mod1::C;
41 │ │         C
42 │ │     }
   │ ╰─────^ Invalid return expression

warning[W03017]: Use of deprecated constant
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:40:22
   │
 4 │     #[deprecated]
   │       ---------- Constant 'C' in module '0x42::mod1' deprecated here
   ·
40 │         use 0x42::mod1::C;
   │                         ^ Use of deprecated constant 'C' from module '0x42::mod1'

warning[W03014]: Use of deprecated member
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:41:6
   │
 4 │     #[deprecated]
   │       ---------- Member 'C' in module '0x42::mod1' deprecated here
   ·
41 │         C
   │         ^ Use of deprecated member 'C' from module '0x42::mod1'

error[E04001]: restricted visibility
   ┌─ tests/move_check/deprecated/deprecated_constant_duplicated_struct2.move:41:6
   │
 5 │     const C: u64 = 0;
   │           - Constants are internal to their module, and cannot can be accessed outside of their module
   ·
41 │         C
   │         ^ Invalid access of '0x42::mod1::C'

